--- a/render.yaml
+++ b/render.yaml
@@ -24,12 +24,6 @@ services:
     name: lms-web
     env: static
     plan: free
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install && REACT_APP_API_URL=https://lms-api.onrender.com npm run build
     staticPublishPath: frontend/build
     autoDeploy: true
-    envVars:
-      - key: REACT_APP_API_URL
-        fromService:
-          name: lms-api
-          type: web
-          property: url
