--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
     "client": "cd frontend && npm start",
-    "dev:full": "concurrently \"npm run dev\" \"npm run client\""
+    "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
+    "seed": "node backend/seed.js"
   },
   "keywords": ["lms", "education", "learning"],
   "author": "",
