--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon backend/server.js",
     "client": "cd frontend && npm start",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
-    "seed": "node backend/seed.js"
+    "seed": "node backend/seed.js",
+    "check-users": "node backend/check-users.js"
   },
   "keywords": ["lms", "education", "learning"],
   "author": "",
