--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,14 +7,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@videojs/themes": "^1.0.1",
     "axios": "^1.6.2",
     "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^3.3.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "^4.6.2",
+    "video.js": "^8.23.4",
+    "videojs-youtube": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
