--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon backend/server.js",
     "client": "cd frontend && npm start",
     "dev:full": "concurrently \"npm run dev\" \"npm run client\"",
+    "build": "cd frontend && npm install && npm run build",
+    "heroku-postbuild": "npm run build",
     "seed": "node backend/seed.js",
     "check-users": "node backend/check-users.js"
   },
