--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^3.3.0",
     "socket.io-client": "^4.6.2",
     "video.js": "^8.23.4",
     "videojs-youtube": "^3.0.1"
