--- a/package.json
+++ b/package.json
@@ -13,24 +13,28 @@
     "seed": "node backend/seed.js",
     "check-users": "node backend/check-users.js"
   },
-  "keywords": ["lms", "education", "learning"],
+  "keywords": [
+    "lms",
+    "education",
+    "learning"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "multer": "^2.0.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
-    "socket.io": "^4.6.2",
-    "express-validator": "^7.0.1"
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=18.0.0",
