--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,6 @@ services:
     name: lms-dau-backend
     env: node
     region: singapore
-    rootDir: backend
     buildCommand: npm install
     startCommand: npm start
     autoDeploy: true
@@ -27,9 +26,8 @@ services:
     name: lms-dau-frontend
     env: static
     region: singapore
-    rootDir: frontend
-    buildCommand: npm install && npm run build
-    staticPublishPath: ./build
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/build
     autoDeploy: true
     envVars:
       - key: REACT_APP_API_URL
